# Ozone

./: .env.example  .gitattributes  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/ozone-api/: Cargo.toml
crates/ozone-api/migrations/: 0001_init.sql  0002_roles_invites.sql  0003_messages.sql  0004_channels.sql  0005_relationships.sql  0006_dms.sql  0007_expressions.sql  0008_moderation.sql  0009_instance_admin.sql  0010_webhooks_events_search.sql  0011_read_states.sql  0012_profiles.sql  0013_voice.sql  0014_discovery.sql  0015_polls.sql  0016_attachments.sql  0017_account_deletion.sql  0018_guild_profile.sql  0019_member_invite.sql  0020_role_style.sql  0021_everyone_membership.sql  0022_channel_settings.sql  0023_message_sticker.sql  0024_system_channel.sql  0025_automod.sql  0026_guild_settings.sql  0027_message_embeds.sql  0028_thread_lifecycle.sql  0029_dm_e2ee.sql  0030_dm_key_escrow.sql  0031_name_style.sql  0032_dm_recovery.sql
crates/ozone-api/src/: config.rs  crypto.rs  db.rs  error.rs  extract.rs  gateway.rs  gateway_session.rs  lib.rs  main.rs  permissions.rs  presence.rs  ratelimit.rs  routes_attachments.rs  routes_auth.rs  routes_automod.rs  routes_chat.rs  routes_discovery.rs  routes_dms.rs  routes_emojis.rs  routes_events.rs  routes_guild.rs  routes_instance.rs  routes_instance_admin.rs  routes_messages.rs  routes_moderation.rs  routes_notifications.rs  routes_polls.rs  routes_presence.rs  routes_relationships.rs  routes_roles.rs  routes_soundboard.rs  routes_stickers.rs  routes_users.rs  routes_voice.rs  routes_webhooks.rs  sfu_client.rs  state.rs  util.rs
crates/ozone-api/tests/: account.rs  account_delete.rs  attachments.rs  channels.rs  discovery.rs  dms.rs  e2ee.rs  events.rs  expressions.rs  flow.rs  gateway.rs  guild_admin.rs  instance_admin.rs  invites.rs  leave_guild.rs  messages.rs  moderation.rs  notifications.rs  permissions.rs  polls.rs  presence.rs  profiles.rs  realtime.rs  realtime_social.rs  relationships.rs  search.rs  security.rs  security_s10.rs  security_s11.rs  security_s13.rs  security_s16.rs  security_s3.rs  security_s4.rs  security_s4b.rs  security_s5.rs  security_s6.rs  security_s6b.rs  security_s6c.rs  security_s7.rs  security_s8.rs  (+3 more)
crates/ozone-core/: Cargo.toml
crates/ozone-core/src/: cache.rs  client.rs  client_account.rs  client_attachments.rs  client_discovery.rs  client_dms.rs  client_events.rs  client_expressions.rs  client_guild.rs  client_instance_admin.rs  client_invites.rs  client_members.rs  client_messaging.rs  client_notifications.rs  client_polls.rs  client_relationships.rs  client_roles.rs  client_search.rs  client_webhooks.rs  gateway.rs  instances.rs  lib.rs  session.rs  store.rs
crates/ozone-core/tests/: account.rs  attachments.rs  client_api.rs  discovery.rs  dms.rs  events.rs  expressions.rs  gate.rs  guild.rs  instance_admin.rs  invites.rs  members.rs  messaging.rs  notifications.rs  polls.rs  relationships.rs  roles.rs  search.rs  session.rs  webhooks.rs
crates/ozone-core/tests/common/: mod.rs
crates/ozone-proto/: Cargo.toml
crates/ozone-proto/src/: dto.rs  gateway.rs  ids.rs  lib.rs  perms.rs  token.rs
crates/ozone-sfu/: Cargo.toml  README.md
crates/ozone-sfu/src/: lib.rs  main.rs  room.rs  server.rs
crates/ozone-sfu/tests/: auth.rs
crates/ozone-ui/: Cargo.toml
crates/ozone-ui/src/: app.rs  main.rs  style.rs  theme.rs
deploy/: Dockerfile.almalinux  Dockerfile.sfu  ozone-api.service  ozone-sfu.service
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
desktop/src/: App.tsx  api.test.ts  api.ts  gateway.ts  index.css  main.tsx  store.test.ts  store.ts  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: AddToGroupModal.tsx  AuditLogModal.tsx  AuthScreen.tsx  AuthedMedia.tsx  AutomodPage.tsx  Avatar.tsx  BansModal.tsx  ChannelSettings.tsx  ChannelSidebar.tsx  ChatView.tsx  CreatePollModal.tsx  DMProfilePanel.tsx  DiscoveryModal.tsx  EmojiModal.tsx  EventsModal.tsx  ExpressionPages.tsx  FriendsView.tsx  GuildContextMenu.tsx  HeaderActions.tsx  ImageCropModal.tsx  InstanceAdminSection.tsx  InstanceGate.tsx  InviteModal.tsx  MemberList.tsx  MessageList.tsx  PollView.tsx  ProfilePopout.tsx  RolesPage.tsx  ServerRail.tsx  ServerSettings.tsx  Settings.tsx  StatusDot.tsx  UserPanel.tsx  VoiceStage.tsx  VoiceTextChat.tsx  VoiceVideoSettings.tsx  WebhooksModal.tsx
desktop/src/components/ui/: ChannelContextMenu.tsx  EmojiPicker.tsx  MessageContextMenu.tsx  Skeleton.tsx  Spinner.tsx  StickerPicker.tsx  StreamQualityMenu.tsx  Switch.tsx  Tooltip.tsx  VoiceMemberContextMenu.tsx
desktop/src/lib/: anim.ts  e2ee.test.ts  e2ee.ts  emojiData.ts  format.ts  games.ts  imageUpload.ts  instance.ts  markdown.test.ts  markdown.tsx  mediaPrefs.ts  permissions.test.ts  permissions.ts  voice.test.ts  voice.ts
docs/: 00-vision-et-perimetre.md  01-architecture.md  02-stack-technique.md  03-modele-de-donnees.md  04-api-rest.md  05-gateway-temps-reel.md  06-infrastructure-vocale.md  07-securite-chiffrement.md  08-performance.md  09-roadmap.md  10-deploiement.md  11-client.md  DISCORD-SERVER-SETTINGS-REF.md  SECURITY-REVIEW-S1-S2.md  SFU-RENEGOTIATION-DESIGN.md  UI-DISCORD-REFERENCE.md
docs/features/: 00-instances.md  01-comptes-authentification.md  02-serveurs.md  03-salons.md  04-messagerie.md  05-vocal-video.md  06-partage-ecran.md  07-messages-prives.md  08-profil.md  09-amis-relations.md  10-roles-permissions.md  11-moderation-securite.md  12-expressions.md  13-notifications.md  14-recherche.md  15-parametres-utilisateur.md  16-apparence-themes.md  17-webhooks-bots-integrations.md  18-evenements.md  19-decouverte-onboarding.md  20-overlay-streamer.md
scripts/: deploy.sh  install.sh  reset.sh  restart.sh  sfu-auth-probe.mjs
