[workspace]
resolver = "2"
members = [
    "crates/ozone-proto",
    "crates/ozone-api",
    "crates/ozone-sfu",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Ozone"]
repository = ""

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
