[package]
name = "ozone-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Serveur Ozone (API REST + Gateway WS). Mode tout-en-un SQLite pour le dev et le self-host léger."

[lib]
name = "ozone_api"
path = "src/lib.rs"

[[bin]]
name = "ozone-api"
path = "src/main.rs"

[dependencies]
ozone-proto = { path = "../ozone-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
axum = { version = "0.7", features = ["ws", "multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
