[package]
name = "ozone-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cœur client partagé d'Ozone (réseau, état, registre d'instances, voix, crypto) — multiplateforme."

[dependencies]
ozone-proto = { path = "../ozone-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
