[package]
name = "ozone-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cœur client partagé d'Ozone (réseau, état, registre d'instances, voix, crypto) — multiplateforme."

[dependencies]
ozone-proto = { path = "../ozone-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
# Client HTTP : rustls (pas d'OpenSSL). ring est acceptable côté client (≠ contrainte serveur).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
futures-util.workspace = true
# Cache local : même SQLite (sans TLS) que le serveur ⇒ pas de second binding natif.
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
ozone-api = { path = "../ozone-api" }
axum = "0.7"
