[package]
name = "ozone-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Types partagés client/serveur pour Ozone (DTOs API, protocole gateway, snowflakes)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
