[package]
name = "ozone-sfu"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nœud média Ozone (SFU WebRTC) — relais de flux RTP audio/vidéo. Processus séparé de l'API."

[lib]
name = "ozone_sfu"
path = "src/lib.rs"

[[bin]]
name = "ozone-sfu"
path = "src/main.rs"

[dependencies]
ozone-proto = { path = "../ozone-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
webrtc = "0.17.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
