[package]
name = "ozone-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Client natif Ozone (desktop) — UI Iced (GPU/wgpu), branchée sur ozone-core. Cf. docs/11-client.md."

[[bin]]
name = "ozone"
path = "src/main.rs"

[dependencies]
ozone-core = { path = "../ozone-core" }
# UI native GPU. `tokio` : exécute les Task async (reqwest/WS d'ozone-core) sur le réacteur tokio.
# `ring` est tiré côté client (rustls/wgpu) — acceptable (≠ contrainte serveur). Cf. docs/11-client.md.
iced = { version = "0.13", features = ["tokio"] }

[dev-dependencies]
# Construction de DTO dans les tests du réducteur.
serde_json = "1"
