# Crate d'empaquetage desktop (Tauri v2) du client Ozone. Workspace AUTONOME (`[workspace]` vide)
# pour ne PAS être happé par le workspace Rust racine (qui doit rester zéro-`ring` ; Tauri/WebView2
# n'y appartiennent pas).
[package]
name = "ozone-desktop"
version = "0.1.0"
description = "Client Ozone (desktop)"
authors = ["Ozone"]
edition = "2021"

[workspace]

[lib]
name = "ozone_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `devtools` : autorise l'inspecteur (clic droit → Inspecter) même en build release, le temps de
# diagnostiquer. À retirer pour la distribution finale.
tauri = { version = "2", features = ["devtools"] }
# Plugin HTTP natif : les requêtes passent par Rust (reqwest), donc PAS soumises à la politique
# CORS du WebView (l'origine du front est tauri.localhost ≠ instance). Indispensable côté .exe.
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Empêche l'ouverture d'une console au lancement en release (Windows).
custom-protocol = ["tauri/custom-protocol"]
